# optiMHC

./: .gitignore  .readthedocs.yaml  CODE_REVIEW.md  README.md  README.rst  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/_build/html/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  objects.inv  (+4 more)
examples/: classII_example.yaml  classI_example.yaml  experiment_example.yaml
optimhc/: __init__.py  __main__.py  cli.py  psm_container.py  utils.py
optimhc/PWMs/II/: c_flank_ppm  convert_ppm_to_pwm.py  n_flank_ppm  remove_header.sh
optimhc/core/: __init__.py  config.py  feature_generation.py  logging_helper.py  pipeline.py
optimhc/feature_generator/: DeepLC.py  PWM.py  base_feature_generator.py  basic.py  ladder_peptide.py  mhcflurry.py  netMHCIIpan.py  netMHCpan.py  overlapping_peptide.py  spectra_similarity.py  spectral_similarity.py
optimhc/gui/: __init__.py  app.py  style.py  utils.py
optimhc/gui/components/: __init__.py  config_form.py  feature_generator_form.py  file_upload.py  log_viewer.py  modification_map.py  pipeline_control.py  rescore_form.py  results_viewer.py
optimhc/gui/pages/: __init__.py  configure.py  home.py  results.py  run.py
optimhc/parser/: __init__.py  mzml.py  pepxml.py  pin.py  yaml.py
optimhc/rescore/: model.py  mokapot.py
optimhc/visualization/: __init__.py  plot_features.py  plot_roc.py  plot_tdc_distribution.py  save_or_show_plot.py
tests/: conftest.py  test_config.py  test_psm_container.py
(+1305 files in other folders)
