[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimhc"
version = "0.1.0"
description = "A high-performance rescoring pipeline for immunopeptidomics data to significantly enhance peptide identification performance"
authors = [
  { name="Zixiang Shang", email="steven5h4ng@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "deeplc==3.1.1",
    "koinapy==0.0.10",
    "lxml==5.3.0",
    "matplotlib==3.9.2",
    "mhctools @ git+https://github.com/openvax/mhctools.git@868ed09b4dfcab18aed563727d65bca3408476ea",
    "mhcflurry==2.1.4",
    "mokapot==0.10.0",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pyteomics==4.7.5",
    "PyYAML==6.0.2",
    "scikit_learn==1.5.2",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "tqdm==4.67.0",
    "xgboost==1.7.6"
]

[project.scripts]
optimhc = "optimhc.__main__:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["optimhc*"]

[tool.setuptools.package-data]
optimhc = ["PWMs*"]